# rust-rest-api

./: .env.default  .env.docker.default  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml
.github/workflows/: deploy_heroku.yml
migrations/2023-09-09-074611_create_table/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs  service.rs
