[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
postgres = "*"
tokio-postgres = "*"
tokio = "*"
dotenv = "0.14.1"
diesel = { version = "2.1.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
env_logger = "0.9.0"
